feat:添加疗愈日志相关功能
